# cgal

./: #8561dibya  .appveyor.yml  .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .markdownlint.json  .travis.yml  AABB_2d_traits.h  AABB_Collision_detector.h  AABB_segment_2_primitive.h  AABB_tree_mod.h  Arr_SegmentData_traits.h  CGALConfig.cmake  CGALConfigVersion.cmake  CMakeLists.txt  Graphics.cpp  Graphics.h  ICollisionDetector.h  INSTALL.md  IvoHello.txt  LICENSE.md  MyMink.h  NaiveCollisionDetector.h  New  README.md  REUSE.toml  SweepCollisionDetection.h  TODO-some-files-cgal-bgl.txt  build_package.sh  ccpp.yml  cmake_uninstall.cmake.in  copyright  cppfiles.txt  create_cmake_scripts  main_hdvf.cpp  mem_log.cpp  mem_log.h  mink.cpp  (+12 more)
AABB_tree/benchmark/AABB_tree/: AabbTest.cpp  CMakeLists.txt  EmbreeTest.cpp  construction_by_sorting.cpp  knot_generation.cpp  meshes_intersections_comparison.cpp  old_bench_AABB_tree.cpp  (+5 more)
Ball_merge_surface_reconstruction/attic/: AutomaticBallMerge.cpp  BallMergeParallel.cpp  CMakeLists.txt  happly.h
CMake/: CGALConfig_binary.cmake.in  CGALConfig_install.cmake.fhs.in  CGALConfig_install.cmake.in  CGALConfig_install.cmake.source.in  CMakeLists.txt  FindCGAL.cmake.in  INSTALL_via_cmake  UseCGAL.cmake.in  compiler_config.h.in  set_compiler_flags.cmake
CMake/demo/: CMakeLists.txt
CMake/examples/: CMakeLists.txt
CMake/src/: CMakeLists.txt
CMake/test/: CMakeLists.txt
Documentation/: BaseDoxyfile.in  CGAL.dxy.in  CMakeLists.txt  Customizations.txt  Doxyfile  Doxyfile-RewriteRules  Doxyfile.in  DoxygenLayout.xml  DoxygenLayoutPackage.xml  General.txt  Introduction.txt  Preliminaries.txt  TODO.txt  cgal_package_stylesheet.css  cgal_stylesheet.css  conceptify.py  dont_submit  doxyassist.xml  footer.html  hacks.js  header.html  header_package.html  how_to_cite_cgal.bib  html_output_post_processing.py  jquery.footnotes.min.js  pkglist_filter  pkglist_filter.bat  pkglist_filter.py  pkglist_filter.sh  rewrite_rules.txt  stylesheet.css  testsuite.py  txt_filter.sh
Documentation/biblio/: README.txt  cgal_manual.bib  how_to_cite.html  how_to_cite_cgal.txt  makebiblio  manual-4.1.bib  manual-4.2.bib  manual-4.3.bib
Documentation/conversion_tools/: check_duplicated_section_anchor.py  generate_rw_map.py  markup_replacement.py  rename_macros.input  rename_macros.sh  split_doxyassist.py
Documentation/doc/: CMakeLists.txt  Customizations.txt  Doxyfile  DoxygenLayout.xml  General.txt  Getting_started.txt  Installation.txt  Introduction.txt  Preliminaries.txt  header.html  main.txt  packages.txt  stylesheet.css
Documentation/resources/: BaseDoxyfile.in  hacks.js  how_to_cite.html.default  how_to_cite_cgal.bib  how_to_cite_cgal.bib.in  how_to_cite_cgal.txt.default
Documentation/scripts/: generate_how_to_cite.py  makebiblio
Documentation/tags/: place_holder
Installation/: AUTHORS  CGALConfig.cmake  CGALConfigVersion.cmake  CGALConfig_binary.cmake.in  CGALConfig_install.cmake.fhs.in  CGALConfig_install.cmake.source.in  CHANGES  CHANGES.md  CHANGES_from_3.6-beta1  CHANGES_from_CGAL-3.5-beta1  CMakeLists.txt  INSTALL  INSTALL.md  INSTALL_via_cmake  INSTALL_with_install_cgal  LICENSE  LICENSE.FREE_USE  LICENSE.GPL  LICENSE.LGPL  LICENSE.QPL  README  README.md  REUSE.toml  cgal.css  changes.html  changes.md  changes.txt  description.txt  dont_submit  html2textrc  install_cgal  list_of_documented_headers.cmake  maintainer  update_CHANGES
Installation/.reuse/: dep5
Installation/LICENSES/: LicenseRef-RFL.txt
Installation/Modules/: Nef_2_module
Installation/auxiliary/: cgal_create_cmake_script.1
Installation/config/: version.h.in
Installation/demo/: CMakeLists.txt  GNUmakefile  makefile
Installation/doc_html/: cgal.css  expected.txt  index.html
Installation/doc_tex/: installation_manual.tex
Installation/examples/: CMakeLists.txt  GNUmakefile
Installation/make/: README  sample_include_makefile  sample_include_makefile_LEDA
Installation/src/: CGAL_libs_verinfo.rc.in  CMakeLists.txt  makefile  makefile_lib  makefile_sharedlib
Installation/test/: CMakeLists.txt
Mesh_3/: .cvsignore  CMakeLists.txt  Doxyfile  GNUmakefile  README  TODO  changes.txt  dont_submit
Mesh_3/applications/: CMakeLists.txt  Distribution_displayer.h  GNUmakefile  Gd_displayer.h  Qt_widget_displayer.C  README  cgal_to_medit.cpp  display_distribution.C  display_distribution.cpp  dump_to_ghs_points  identify_identical_points_in_OFF_files.cpp  lanteri.C  lanteri.cpp  lanteri_output_tet_mesh.C  lanteri_output_tet_mesh.cpp  lanteri_process_results.C  lanteri_process_results.cpp  lanteri_utils.h  libmesh.c  libmesh.h  makefile  medit_to_cgal.C  merge_off_files.cpp  mesh_3D_image.cpp  mesh_implicit_domains.cpp  mesh_polyhedral_domain.cpp  mesher_tester.cpp  mesher_tester.h  mesher_tester_image.cpp  mesher_tester_polyhedron.cpp  nb2mesh.c  off_to_ghs.cpp  off_to_medit.C  slivers_exuder.C  stat_mesh.cpp  test_off.C  thread_queue.h  utils.h  weighted_types.h
PMP_Boolean_operations/benchmark/: CMakeLists.txt  benchmarking_snap_polygon_soup.sh  coplanar_cubes_autorefinement.cpp  corefinement_mesh_union_bench.cpp  rotated_cubes_autorefinement.cpp
Poisson_surface_reconstruction_3/: CMakeLists.txt  dont_submit
Straight_skeleton_3/StraightSkel/: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  StraightSkel.ini  add_or_remove_bbox.cpp  analyze_input.cpp  build.sh  check_all.sh  compare_outputs.cpp  convert_to_weighted_PLY.cpp  run_and_compare.sh  test.sh  tilt_faces.cpp
Surface_mesh/benchmark/: CMakeLists.txt  Stop_watch.h  lcc_performance_2.cpp  lcc_performance_2.h  performance_2.cpp  performance_2.h  polyhedron_performance.cpp  polyhedron_performance.h  surface_mesh_performance.h
Surface_mesh_simplification/off2gts/: CMakeLists.txt  off2gts.cpp
Tetrahedral_remeshing/: CMakeLists.txt
Tetrahedral_remeshing/package_info/: dependencies  maintainer
examples/Segment_Delaunay_graph_Linf_2/: CMakeLists.txt  print-sdg.cpp  sdg-count-sites.cpp  sdg-filtered-traits.cpp  sdg-info-set.cpp  sdg-red-blue-info.cpp  sdg-voronoi-edges.cpp  segment_generator_ap.cpp
(+45395 files in other folders)
